# exact

./: Cargo.toml  README.md  rustc-ice-2025-05-29T17_09_37-5819.txt  rustc-ice-2025-05-29T20_53_17-27440.txt
exact_derive/: Cargo.toml
exact_derive/src/: lib.rs
scripts/: benchmark.ps1
src/: arithmetic.rs  elgamal.rs  lib.rs  macro_test.rs  main.rs  serialization-hybrid.rs  serialization.rs  serialization_hybrid.rs  size.rs  zkp.rs
src/groups/: mod.rs
src/groups/p256/: element.rs  mod.rs  scalar.rs  tests.rs
src/groups/ristretto255/: element.rs  mod.rs  scalar.rs
src/traits/: element.rs  group.rs  mod.rs  scalar.rs
src/utils/: hash.rs  mod.rs  rng.rs
src/zkp/: bit.rs  chaum_pedersen.rs  mod.rs  schnorr.rs  shuffle.rs
www/: index.html
