[package]
name = "exact"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = {version = "4.1.3", features = ["rand_core", "digest"] }
rand = { version = "0.8", features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
sha3 = "0.10"
hybrid-array = "0.2.0-rc.9"
typenum = "1.18.0"

[lib]
crate-type = ["cdylib", "rlib"]