[package]
name = "exact"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = {version = "4.1.3", features = ["rand_core", "digest"] }
p256 = { version = "0.13.2", features = ["arithmetic"] }
base64ct = "1.6.0"
rand = { version = "0.8", features = ["std"] }
sha3 = "0.10"
hybrid-array = "0.2.0-rc.9"
typenum = "1.18.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
web-time = "1.1.0"
js-sys = "0.3"


[lib]
crate-type = ["cdylib", "rlib"]

# [package.metadata.wasm-pack.profile.release] 
# wasm-opt = ["-O", "--enable-bulk-memory", "--enable-mutable-globals", "--enable-reference-types"]
